--- a/build.yaml
+++ b/build.yaml
@@ -20,7 +20,7 @@
 ---
 include:
   - board: novelkeys_skelett40
-  - board: novelkeys_skelett40
-    snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_STUDIO=y
-    artifact-name: skelett40_zmk_studio
+  #  - board: novelkeys_skelett40
+  #    snippet: studio-rpc-usb-uart
+  #    cmake-args: -DCONFIG_ZMK_STUDIO=y
+  #    artifact-name: skelett40_zmk_studio
